--- a/doc/manual/installation.tex
+++ b/doc/manual/installation.tex
@@ -64,8 +64,9 @@ File & Purpose\\
 \texttt{iterators.cpp}             & Shows how the mesh and segments can be traversed, cf.~Chapter \ref{chap:iterators} \\
 \texttt{mesh\_setup.cpp}           & Fill a mesh with cells, cf.~Chapter \ref{chap:meshsetup} \\
 \texttt{multi\_segment.cpp}        & Explains multi-segment capabilities, cf.~Chapter \ref{chap:meshsetup} \\
-\texttt{neighbour\_iteration.cpp}  & Shows how to iterate over neighbour elements, cf.~Chapter \ref{chap:iterators} \\
-\texttt{polygon.cpp}               & ViennaGrid also supports Polygons, cf.~Chapter \ref{chap:meshsetup} \\
+\texttt{neighbor\_iteration.cpp}   & Shows how to iterate over neighbor elements, cf.~Chapter \ref{chap:iterators} \\
+\texttt{polygon.cpp}               & ViennaGrid also supports polygons, cf.~Chapter \ref{chap:meshsetup} \\
+\texttt{read\_plc.cpp}             & Shows ho to use the PLC reader, cf.~Chapter \ref{chap:io} \\
 \texttt{segments.cpp}              & Shows how to use segmentations and segments, cf.~Chapter \ref{chap:meshsetup}
 \end{tabular}
 \caption{Overview of the sample applications in the \texttt{examples/tutorial} folder}
